# WWBZ

./: .gitignore  CMakeLists.txt  CMakeLists1108.txt  README.md  make.sh  mavrouter.sh  run.sh  run_Tello.sh  visual.sh
capture/: 20191108224556.avi  20191113_202008.avi  20191113_204258.avi  20191113_204859.avi  20191113_205112.avi  20191113_205330.avi  20191113_205424.avi  20191113_205526.avi  20191113_210706.avi  20191113_211902.avi  20191113_212225.avi  20191113_232950.avi  20191113_233049.avi  20191113_233546.avi  20191113_234449.avi  20191113_234556.avi  20191113_235840.avi  20191114_000645.avi  20191114_000826.avi  20191114_000908.avi  20191114_001001.avi  20191114_001032.avi  20191114_002259.avi  20191114_005713.avi  20191114_010258.avi  20191114_103954.avi  20191114_104046.avi  20191114_104111.avi  20191114_104203.avi  20191114_104440.avi  20191114_104959.avi  20191114_105121.avi  20191114_105135.avi  20191114_111011.avi  20191114_111100.avi  20191114_111259.avi  20191114_114612.avi  20191114_115326.avi  20191114_115506.avi  20191114_115700.avi  (+62 more)
cfg/: config.json
include/: share_memory.h
log/: out.txt
scripts/: circle.py  circle_in_real.py  data_collection.py  object_detect.py
src/: circle_in_real.cpp  droneyee.cpp  iso.py  main_1.cpp  main_2.cpp  offboard_velocity.cpp  share_memory.cpp
video/: 20160212_002913.avi  20160212_002914.avi  20160212_003026.avi  20160212_003159.avi  20160212_003231.avi  20160212_003320.avi  20160212_003401.avi  20160212_003436.avi  20160212_003524.avi  20160212_003550.avi  20160212_003818.avi  20160212_003957.avi  20160212_004104.avi
